button z-index problem fix

--- a/src/app/ui/elements/buttons/yel-border-btn/yel-border-btn.component.scss
+++ b/src/app/ui/elements/buttons/yel-border-btn/yel-border-btn.component.scss
@@ -1,7 +1,7 @@
 .yellow,
 .yellow:active,
 .yellow:focus {
-  z-index: 10;
+  z-index: 0;
   border-radius: 10px;
   padding: 14.5px 16.5px;
   position: relative;
